Fix mobile header overflow on small screen resolution

--- a/resources/frontend/sass/themes/_header.scss
+++ b/resources/frontend/sass/themes/_header.scss
@@ -107,6 +107,8 @@
   transition: transform 0.3s linear;
   transform: translateX(100%);
   z-index: 500;
+  overflow: scroll;
+  padding-bottom: 3rem;
 
   background-color: palette("white");
 
